--- a/server/public/not-found.css
+++ b/server/public/not-found.css
@@ -6,7 +6,7 @@
 
 body {
   height: 90vh;
-  background-color: #15B097;
+  background-color: #589bf5;
   display: flex;
   flex-direction: column;
   justify-content: center;
