change URLs to production

--- a/server/views/not-found.pug
+++ b/server/views/not-found.pug
@@ -9,4 +9,4 @@ html(lang="en")
     p #{ url }
     h1 404
     h2 Not Found
-    a(href="/") Go To Dashboard
+    a(href=`${ clientDomain }`) Go To Dashboard
